Tentative MPU-401 driver with PnP for ACPI-enabled systems

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -77,6 +77,7 @@ CONFIG_RTC		= @CONFIG_RTC@
 CONFIG_USB		= @CONFIG_USB@
 CONFIG_SND_BIT32_EMUL	= @CONFIG_SND_BIT32_EMUL@
 CONFIG_VIDEO_DEV	= @CONFIG_VIDEO_DEV@
+CONFIG_ACPI_BUS		= @CONFIG_ACPI_BUS@
 
 ifndef NEW_KBUILD
 INCLUDE		= -I$(TOPDIR)/include @EXTRA_INCLUDES@ @KERNEL_INC@
