Recoded mod-deps to use Kconfig as source for dependencies. The new code still contains bugs in the acinclude.m4 output.

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -22,6 +22,9 @@ all: $(TARGETS)
 .PHONY: dummy
 dummy:
 
+mod-deps: mod-deps.o
+	$(CC) -g $(INCLUDE) mod-deps.o -o $@
+
 kredirect: kredirect.o
 	$(CC) $(INCLUDE) kredirect.o -o $@
 
