--- a/configure.in
+++ b/configure.in
@@ -497,6 +497,10 @@ dnl Check for ACPI bus driver...
 CHECK_KERNEL_CONFIG(CONFIG_ACPI_BUS, [ACPI bus driver])
 AC_SUBST(CONFIG_ACPI_BUS)
 
+dnl Check experimental drivers...
+CHECK_KERNEL_CONFIG(CONFIG_EXPERIMENTAL, [Experimental drivers in kernel])
+AC_SUBST(CONFIG_EXPERIMENTAL)
+
 dnl Check for SGI/MIPS (HAL2) support...
 AC_MSG_CHECKING(for SGI/MIPS (HAL2) architecture)
 CONFIG_SGI=""
