- clean up Makefiles.   dependencies are parsed in mod-deps.

--- a/support/pnp/Makefile
+++ b/support/pnp/Makefile
@@ -15,10 +15,6 @@ export-objs  += pnp.o
 snd-pnp-objs := pnp.o
 
 # Toplevel Module Dependency
-ifndef CONFIG_PNP_KERNEL
-ifeq (y,$(CONFIG_PNP))
-obj-m += snd-pnp.o
-endif
-endif
+obj-m := snd-pnp.o
 
 include $(TOPDIR)/Rules.make
