--- a/utils/buildrpm.in
+++ b/utils/buildrpm.in
@@ -4,6 +4,10 @@ kversion=@kversion@.@kpatchlevel@.@ksublevel@@kextraversion@
 source=.
 version=`cat $source/../version`
 package=$source/../../alsa-driver-$version.tar.bz2
+xpackages=/usr/src/redhat
+test -d /usr/src/packages && xpackages=/usr/src/packages
+xbuildrpm=rpm
+rpmbuild --usage 2> /dev/null > /dev/null && xbuildrpm=buildrpm
 
 if [ -z "$TARGET_KERNEL" ]; then
   export TARGET_KERNEL="$kversion"
@@ -16,15 +20,15 @@ if [ ! -r $package ]; then
   exit 1
 fi
 
-cp -fv $package /usr/src/redhat/SOURCES
+cp -fv $package $xpackages/SOURCES
 
 if [ ! -r $source/buildrpm ]; then
   echo "Error: invalid directory: $source"
   exit 1
 fi
 
-if [ ! -d /usr/src/redhat ]; then
-  echo "Error: /usr/src/redhat directory not found"
+if [ ! -d $xpackages ]; then
+  echo "Error: $xpackages directory not found"
   exit 1
 fi
 
@@ -34,7 +38,7 @@ if [ ! -r $source/alsa-driver.spec ]; then
   cd utils
 fi
 
-cp -fv $source/alsa-driver.spec /usr/src/redhat/SPECS
-cd /usr/src/redhat/SPECS
-rpm -ba alsa-driver.spec
-cd /usr/src/redhat
+cp -fv $source/alsa-driver.spec $xpackages/SPECS
+cd $xpackages/SPECS
+$xbuildrpm -ba alsa-driver.spec
+cd $xpackages
