define dummy dump_stack() instead of patching pcm_lib.c

--- a/acore/Makefile
+++ b/acore/Makefile
@@ -5,7 +5,7 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-clean-files := info.c pcm_lib.c pcm_native.c control.c hwdep.c init.c rawmidi.c sound.c timer.c memalloc.c
+clean-files := info.c pcm_native.c control.c hwdep.c init.c rawmidi.c sound.c timer.c memalloc.c
 
 export-objs := sound.o pcm.o pcm_lib.o rawmidi.o timer.o hwdep.o memalloc.o
 include $(SND_TOPDIR)/alsa-kernel/core/Makefile
@@ -15,7 +15,6 @@ snd-page-alloc-objs += memory_wrapper.o
 include $(SND_TOPDIR)/Rules.make
 
 info.c: info.inc info.patch $(SND_TOPDIR)/alsa-kernel/core/info.c
-pcm_lib.c: pcm_lib.patch $(SND_TOPDIR)/alsa-kernel/core/pcm_lib.c
 pcm_native.c: pcm_native.patch $(SND_TOPDIR)/alsa-kernel/core/pcm_native.c
 control.c: control.patch $(SND_TOPDIR)/alsa-kernel/core/control.c
 hwdep.c: hwdep.patch $(SND_TOPDIR)/alsa-kernel/core/hwdep.c
