--- a/utils/buildrpm.in
+++ b/utils/buildrpm.in
@@ -7,7 +7,7 @@ package=$source/../../alsa-driver-$version.tar.bz2
 xpackages=/usr/src/redhat
 test -d /usr/src/packages && xpackages=/usr/src/packages
 xbuildrpm=rpm
-rpmbuild --usage 2> /dev/null > /dev/null && xbuildrpm=buildrpm
+rpmbuild --usage 2> /dev/null > /dev/null && xbuildrpm=rpmbuild
 
 if [ -z "$TARGET_KERNEL" ]; then
   export TARGET_KERNEL="$kversion"
