--- a/usb/Kconfig
+++ b/usb/Kconfig
@@ -6,6 +6,7 @@ menu "ALSA USB devices"
 config SND_USB_USX2Y
 	tristate "US-428 USB driver"
 	depends on SND && USB
+	select SND_HWDEP
 	select SND_PCM
 	help
 	  Say 'Y' or 'M' to include support for US-428 USB devices.
