--- a/usb/Kconfig
+++ b/usb/Kconfig
@@ -4,11 +4,11 @@ menu "ALSA USB devices"
 	depends on SND!=n && USB!=n
 
 config SND_USB_USX2Y
-	tristate "US-428 USB driver"
+	tristate "US-X2Y USB driver"
 	depends on SND && USB
 	select SND_HWDEP
-	select SND_PCM
+	select SND_USB_AUDIO
 	help
-	  Say 'Y' or 'M' to include support for US-428 USB devices.
+	  Say 'Y' or 'M' to include support for Tescam US-X2Y USB devices.
 
 endmenu
