--- a/usb/Kconfig
+++ b/usb/Kconfig
@@ -4,11 +4,12 @@ menu "ALSA USB devices"
 	depends on SND!=n && USB!=n
 
 config SND_USB_USX2Y
-	tristate "US-X2Y USB driver"
+	tristate "Tascam US-122, US-224 and US-428 USB driver"
 	depends on SND && USB
 	select SND_HWDEP
 	select SND_USB_AUDIO
 	help
-	  Say 'Y' or 'M' to include support for Tescam US-X2Y USB devices.
+	  Say 'Y' or 'M' to include support for Tascam USB Audio/MIDI 
+	  interfaces or controllers US-122, US-224 and US-428.
 
 endmenu
