--- a/configure.in
+++ b/configure.in
@@ -63,15 +63,16 @@ fi
 
 dnl Check for directory with kernel source...
 AC_MSG_CHECKING(for directory with kernel source)
+if test -d "/lib/modules/`uname -r`/build" -o -L "/lib/modules/`uname -r`/build"; then
+  DEFAULT_KERNEL_DIR="/lib/modules/`uname -r`/build"
+else
+  DEFAULT_KERNEL_DIR="/usr/src/linux"
+fi
 AC_ARG_WITH(kernel,
   [  --with-kernel=dir       give the directory with kernel sources]
   [                        [/usr/src/linux]],
   kerneldir="$withval",
-  if test -d "/lib/modules/`uname -r`/build" -o -L "/lib/modules/`uname -r`/build"; then
-    kerneldir="/lib/modules/`uname -r`/build"
-  else
-    kerneldir="/usr/src/linux"
-  fi
+  kerneldir="$DEFAULT_KERNEL_DIR"
 )
 AC_DEFINE_UNQUOTED(CONFIG_SND_KERNELDIR, "$kerneldir")
 CONFIG_SND_KERNELDIR="$kerneldir"
@@ -85,7 +86,7 @@ if ! test -r $CONFIG_SND_KERNELDIR/include/linux/version.h; then
 The file $CONFIG_SND_KERNELDIR/include/linux/version.h does not exist.
 Please, install the package with full kernel sources for your distribution
 or use --with-kernel=dir option to specify another directory with kernel
-sources (default is /usr/src/linux).
+sources (default is $DEFAULT_KERNEL_DIR).
 EOF
   exit 1
 fi
