--- a/configure.in
+++ b/configure.in
@@ -477,6 +477,7 @@ CHECK_KERNEL_HEADER(linux/cuda.h, [#include <asm/cuda.h>
 ])
 CHECK_KERNEL_HEADER(linux/pmu.h, [#include <asm/pmu.h>
 ])
+CHECK_KERNEL_HEADER(linux/moduleparam.h)
 
 dnl Check for dump_stack
 if test "$kversion.$kpatchlevel" = "2.6"; then
