Clean up of power-management codes.
- moved commonly used codes to the core layer.
- using the unified suspend/resume callbacks for PCI and ISA
- added snd_card_set_pm_callbacks() and snd_card_set_isa_pm_callbacks()
  as the registration functions.

--- a/pci/Makefile
+++ b/pci/Makefile
@@ -9,7 +9,7 @@ include $(SND_TOPDIR)/Makefile.conf
 # ALSA extra code
 #
 
-clean-files := cs4281.c es1968.c intel8x0.c maestro3.c
+clean-files := intel8x0.c
 
 obj-$(CONFIG_SND) += pdplus/
 
@@ -25,7 +25,4 @@ include $(SND_TOPDIR)/alsa-kernel/pci/Makefile
 
 include $(SND_TOPDIR)/Rules.make
 
-cs4281.c: cs4281.patch $(SND_TOPDIR)/alsa-kernel/pci/cs4281.c
-es1968.c: es1968.patch $(SND_TOPDIR)/alsa-kernel/pci/es1968.c
 intel8x0.c: intel8x0.patch $(SND_TOPDIR)/alsa-kernel/pci/intel8x0.c
-maestro3.c: maestro3.patch $(SND_TOPDIR)/alsa-kernel/pci/maestro3.c
