--- a/configure.in
+++ b/configure.in
@@ -478,6 +478,8 @@ CHECK_KERNEL_HEADER(linux/cuda.h, [#include <asm/cuda.h>
 CHECK_KERNEL_HEADER(linux/pmu.h, [#include <asm/pmu.h>
 ])
 CHECK_KERNEL_HEADER(linux/moduleparam.h)
+CHECK_KERNEL_HEADER(linux/syscalls.h, [#include \"syscalls_26.h\"
+])
 
 dnl Check for dump_stack
 if test "$kversion.$kpatchlevel" = "2.6"; then
