- clean up old dependencies - added the patch stuff for ac97_proc.c

--- a/pci/ac97/Makefile
+++ b/pci/ac97/Makefile
@@ -5,14 +5,12 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-obj-$(CONFIG_SND_AU8810) += snd-ac97-codec.o
-obj-$(CONFIG_SND_AU8820) += snd-ac97-codec.o
-obj-$(CONFIG_SND_AU8830) += snd-ac97-codec.o
-obj-$(CONFIG_SND_ATIIXP) += snd-ac97-codec.o
-obj-$(CONFIG_SND_INTEL8X0M) += snd-ac97-codec.o
-
 export-objs  := ac97_codec.o ak4531_codec.o
+
+clean-files := ac97_proc.c
 
 include $(SND_TOPDIR)/alsa-kernel/pci/ac97/Makefile
 
 include $(SND_TOPDIR)/Rules.make
+
+ac97_proc.c: ac97_proc.patch $(SND_TOPDIR)/alsa-kernel/pci/ac97/ac97_proc.c
