--- a/pci/Kconfig
+++ b/pci/Kconfig
@@ -26,4 +26,12 @@ config SND_EMU10K1X
 	  Say 'Y' or 'M' to include support for Sound Blaster Live Dell
 	  OEM version.
 
+config SND_ATIIXP_MODEM
+	tristate "ATI IXP 150/200/250 Modem"
+	depends on SND
+	select SND_AC97_CODEC
+	help
+	  Say 'Y' or 'M' to include support for ATI IXP 150/200/250 AC97 modem
+	  controller.
+
 endmenu
