--- a/isa/Makefile
+++ b/isa/Makefile
@@ -8,9 +8,7 @@ include $(SND_TOPDIR)/Makefile.conf
 #
 # ALSA extra code
 #
-ifeq (y,$(CONFIG_X86))
-obj-y	+= msnd/
-endif
+obj-$(CONFIG_SND) += msnd/
 
 isapnp-files := als100.isapnp azt2320.isapnp dt019x.isapnp opl3sa2.isapnp \
 		cmi8330.isapnp es18xx.isapnp sscape.isapnp
