--- a/drivers/opl3/Makefile
+++ b/drivers/opl3/Makefile
@@ -5,8 +5,12 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
+clean-files := opl3_lib.c
+
 export-objs  := opl3_lib.o
 
 include $(SND_TOPDIR)/alsa-kernel/drivers/opl3/Makefile
 
 include $(SND_TOPDIR)/Rules.make
+
+opl3_lib.c: opl3_lib.patch $(SND_TOPDIR)/alsa-kernel/drivers/opl3/opl3_lib.c
