--- a/include/config.h.in
+++ b/include/config.h.in
@@ -48,3 +48,4 @@
 #undef CONFIG_HAVE_PCI_CONSISTENT_DMA_MASK
 #undef CONFIG_HAVE_KCALLOC
 #undef CONFIG_OLD_REMAP_PAGE_RANGE
+#undef CONFIG_HAVE_PCI_SAVED_CONFIG
