--- a/usb/usx2y/Makefile
+++ b/usb/usx2y/Makefile
@@ -5,8 +5,13 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-snd-usb-usx2y-objs := usbusx2y.o usbusx2yaudio.o usX2Yhwdep.o
+clean-files := usbusx2y.c usX2Yhwdep.c
 
-obj-$(CONFIG_SND_USB_USX2Y) += snd-usb-usx2y.o
+include $(SND_TOPDIR)/alsa-kernel/usb/usx2y/Makefile
+
+EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/usb/usx2y
 
 include $(SND_TOPDIR)/Rules.make
+
+usbusx2y.c: usbusx2y.patch $(SND_TOPDIR)/alsa-kernel/usb/usx2y/usbusx2y.c
+usX2Yhwdep.c: usX2Yhwdep.patch $(SND_TOPDIR)/alsa-kernel/usb/usx2y/usX2Yhwdep.c
