--- a/include/config.h.in
+++ b/include/config.h.in
@@ -43,6 +43,7 @@
 #undef CONFIG_HAVE_DMA_ADDR_T
 #undef CONFIG_HAVE_MUTEX_MACROS
 #undef CONFIG_HAVE_SCNPRINTF
+#undef CONFIG_HAVE_SSCANF
 
 /* 2.4/2.6 kernels */
 #undef CONFIG_HAVE_PCI_CONSISTENT_DMA_MASK
