--- a/include/config.h.in
+++ b/include/config.h.in
@@ -50,3 +50,4 @@
 #undef CONFIG_HAVE_KCALLOC
 #undef CONFIG_OLD_REMAP_PAGE_RANGE
 #undef CONFIG_HAVE_PCI_SAVED_CONFIG
+#undef CONFIG_HAVE_ACPI_REGISTER_GSI
