--- a/configure.in
+++ b/configure.in
@@ -233,7 +233,7 @@ AC_DEFUN([CHECK_COMPILER], [
         ac_compiler_version=`echo $i | sed -e 's/^.*gcc-\([0-9.]\+\).*$/\1/'`
       fi
       ;;
-    *gcc*)
+    *gcc*|*GCC*)
       if test -z "$ac_compiler_type"; then
         ac_compiler_type=gcc
       fi
