added missing vxp440.c target

--- a/pcmcia/vx/Makefile
+++ b/pcmcia/vx/Makefile
@@ -14,4 +14,5 @@ include $(SND_TOPDIR)/alsa-kernel/pcmcia/vx/Makefile
 include $(SND_TOPDIR)/Rules.make
 
 vxpocket.c: vxpocket.patch $(SND_TOPDIR)/alsa-kernel/pcmcia/vx/vxpocket.c
+vxp440.c: vxpocket.c
 vx_entry.c: vx_entry.patch vx_entry.inc vx_entry.inc1 $(SND_TOPDIR)/alsa-kernel/pcmcia/vx/vx_entry.c
