--- a/configure.in
+++ b/configure.in
@@ -587,6 +587,10 @@ dnl Check for I2C drivers...
 CHECK_KERNEL_TRISTATE_CONFIG(CONFIG_I2C, [I2C driver in kernel])
 AC_SUBST(CONFIG_I2C)
 
+dnl Check for input subsystem...
+CHECK_KERNEL_TRISTATE_CONFIG(CONFIG_INPUT, [input subsystem in kernel])
+AC_SUBST(CONFIG_INPUT)
+
 dnl Check for SGI/MIPS (HAL2) support...
 AC_MSG_CHECKING(for SGI/MIPS (HAL2) architecture)
 CONFIG_SGI=""
