--- a/pci/Makefile
+++ b/pci/Makefile
@@ -14,17 +14,18 @@ clean-files := intel8x0.c
 obj-$(CONFIG_SND) += pdplus/ azx/
 
 snd-hdspm-objs := hdspm.o
+snd-via82xx-modem-objs := via82xx_modem.o
+snd-asihpi-objs := asihpi.o
 
 obj-$(CONFIG_SND_HDSPM) +=snd-hdspm.o
+obj-$(CONFIG_SND_VIA82XX_MODEM) += snd-via82xx-modem.o
+obj-$(CONFIG_SND_ASIHPI) += snd-asihpi.o
 
 #
 #
 #
 
 include $(SND_TOPDIR)/alsa-kernel/pci/Makefile
-
-snd-via82xx-modem-objs := via82xx_modem.o
-obj-$(CONFIG_SND_VIA82XX_MODEM) += snd-via82xx-modem.o
 
 include $(SND_TOPDIR)/Rules.make
 
